--- a/GlobalEvents/GlobalEvents/Views/Events/Musica.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Musica.cshtml
@@ -6,6 +6,15 @@
 <br />
 <br />
 
+@if (Model.Count == 0 || Model == null)
+{
+    <div class="card">
+        <div class="card-content">
+            <div class="card-title center-align">No se encontraron eventos en esta categoría</div>
+        </div>
+    </div>
+}
+
     <div class="col s12 m12 l9">
         <div id="card-container" class="row">
 
