--- a/GlobalEvents/GlobalEvents/Views/Events/Otros.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Otros.cshtml
@@ -8,6 +8,15 @@
 <br />
 <br />
 
+@if (Model.Count == 0 || Model == null)
+{
+    <div class="card">
+        <div class="card-content">
+            <div class="card-title center-align">No se encontraron eventos sin categorías</div>
+        </div>
+    </div>
+}
+
 <div class="col s12 m12 l9">
     <div id="card-container" class="row">
 
