Volver en reportes
Correciones de todos menos en los comentarios, ver como referenciar al
evento.

--- a/GlobalEvents/GlobalEvents/Views/Comments/ReportarComentario.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Comments/ReportarComentario.cshtml
@@ -38,7 +38,7 @@
                     </div>
                 }
                 <div>
-                    @Html.ActionLink("Volver", "Index")
+                    @Html.ActionLink("Volver", "Destacados", "Events")
                 </div>
             </div>
         </div>
