--- a/GlobalEvents/GlobalEvents/Views/Users/ReportarUsuario.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/ReportarUsuario.cshtml
@@ -38,7 +38,7 @@
                     </div>
                 }
                 <div>
-                    @Html.ActionLink("Volver", "Index")
+                    @Html.ActionLink("Volver", "Details", new { id = Model.UserId })
                 </div>
             </div>
         </div>
