Manejo de reportes de usuarios
Todo el manejo de parte del administrador para ver los reportes, editar
estados y demàs de usuario.

--- a/GlobalEvents/GlobalEvents/Views/Manage/Reportes.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Manage/Reportes.cshtml
@@ -90,3 +90,45 @@
         }
     </div>
 </div>
+
+<div class="card">
+    <div class="card-content">
+        @if (Model.Usuarios.Count > 0)
+        {
+            <table class="table striped centered">
+                <div class="card-title center-align">Usuarios reportados</div>
+                <thead class="thead-inverse">
+                    <tr>
+                        <th>
+                            Usuario
+                        </th>
+                        <th>
+                            Reportes
+                        </th>
+
+                        <th>Acción</th>
+                    </tr>
+                </thead>
+
+                @foreach (var item in Model.Usuarios.GroupBy(z => z.IdUsuario).OrderByDescending(z => z.Count()))
+                {
+                    <tr>
+                        <td>
+                            @Html.getNameUser(@Html.DisplayFor(modelItem => item.Key).ToString())
+                        </td>
+                        <td>
+                            @item.Count()
+                        </td>
+                        <td>
+                            @Html.ActionLink("Revisar", "UserReported", "Manage", new { id = item.Key }, null)
+                        </td>
+                    </tr>
+                }
+            </table>
+        }
+        else
+        {
+            <div class="card-title center-align">No hay usuarios reportados</div>
+        }
+    </div>
+</div>
