--- a/GlobalEvents/GlobalEvents/Views/Manage/UserReported.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Manage/UserReported.cshtml
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                         <div class="input-field col s6 right-align">
-                            <input type="button" value="Cerrar caso" class="btn btn-primary red" onclick="location.href='@Url.Action("CerrarReporteUsuario", "Manage", new { @EventoId = Model.Usuarios.Id })'" />
+                            <input type="button" value="Cerrar caso" class="btn btn-primary red" onclick="location.href='@Url.Action("CerrarReporteUsuario", "Manage", new { @UserId = Model.Usuarios.Id })'" />
                         </div>
                     </div>
             }
