Probando a deployar cambiando el codigo en los css

--- a/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
@@ -78,11 +78,11 @@
                 {
                     <fieldset class="rating">
                         <legend>¿Qué le pareció el evento?</legend>
-                        <input type="radio" id="star5" name="rating" value="5" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 5)" /><label for="star5" title="Increíble!">5 stars</label>
-                        <input type="radio" id="star4" name="rating" value="4" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 4)" /><label for="star4" title="Muy bueno">4 stars</label>
-                        <input type="radio" id="star3" name="rating" value="3" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 3)" /><label for="star3" title="Bueno">3 stars</label>
-                        <input type="radio" id="star2" name="rating" value="2" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 2)" /><label for="star2" title="Regular">2 stars</label>
-                        <input type="radio" id="star1" name="rating" value="1" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 1)" /><label for="star1" title="Una pérdida de tiempo">1 star</label>
+                        <input type="radio" id="star5" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 5)" /><label for="star5" title="Increíble!"></label>
+                        <input type="radio" id="star4" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 4)" /><label for="star4" title="Muy bueno"></label>
+                        <input type="radio" id="star3" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 3)" /><label for="star3" title="Bueno"></label>
+                        <input type="radio" id="star2" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 2)" /><label for="star2" title="Regular"></label>
+                        <input type="radio" id="star1" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 1)" /><label for="star1" title="Una pérdida de tiempo"></label>
                     </fieldset>
                 }
             }
